--- a/index.html
+++ b/index.html
@@ -1,11 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parallax Demo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
+    <!-- first parallax image -->
+    <div id="p1" class="p-img">
+        <div class="p-text-container">
+            <h1 class="p-title">Window Pigeons</h1>
+        </div>
+    </div>
+    <!-- section 1 -->
+    <section class="section">
+        <h2 class="section-title">Pigeon Fact 1</h2>
+        <p class="section-text">
+            Pigeons are incredibly complex and intelligent animals. They are one of only a small number of species to pass the ‘mirror test’ – a test of self recognition. They can also recognise each letter of the human alphabet, differentiate between photographs, and even distinguish different humans within a photograph.
+        </p>
+    </section>
+    <!-- second parallax image -->
+    <div id="p2" class="p-img"></div>
+    <!-- section 2 -->
+    <section class="section">
+        <h2 class="section-title">Pigeon Fact 2</h2>
+        <p class="section-text">
+            Pigeons are renowned for their outstanding navigational abilities. They use a range of skills, such as using the sun as a guide and an internal ‘magnetic compass’. A study at Oxford University found that they will also use landmarks as signposts and will travel along man-made roads and motorways, even changing direction at junctions.
+        </p>
+    </section>
+    <!-- third parallax image -->
+    <div id="p3" class="p-img"></div>
+    <!-- section 3 -->
+    <section class="section">
+        <h2 class="section-title">Pigeon Fact 3</h2>
+        <p class="section-text">
+            Despite the social perception as dirty and disease-ridden, pigeons are actually very clean animals and there is very little evidence to suggest that they are significant transmitters of disease.
+        </p>
+    </section>
+    <!-- last parallax image -->
+    <div id="p4" class="p-img">
+        <div class="p-text-container">
+            <h1 class="p-title">Goodbye!</h1>
+        </div>
+    </div>
 </body>
+
 </html>
